@@ -1,8 +1,9 @@
 package presentation.screens.dayPartMenu
 
 import androidx.compose.foundation.layout.Arrangement
-import androidx.compose.foundation.layout.Column
+import androidx.compose.foundation.layout.PaddingValues
 import androidx.compose.foundation.layout.padding
+import androidx.compose.foundation.lazy.LazyColumn
 import androidx.compose.material.Text
 import androidx.compose.runtime.Composable
 import androidx.compose.runtime.collectAsState
@@ -14,9 +15,8 @@ import androidx.compose.ui.unit.dp
 import androidx.compose.ui.unit.sp
 import org.jetbrains.compose.resources.ExperimentalResourceApi
 import presentation.reusableUi.IconTextTimeButton
-import zealotry.composeapp.generated.resources.Res
-import zealotry.composeapp.generated.resources.day
-import zealotry.composeapp.generated.resources.wake_up
+import presentation.screens.dayPartMenu.morningButtons.MorningButtons
+import presentation.screens.dayPartMenu.morningButtons.toBundle
 
 @OptIn(ExperimentalResourceApi::class)
 @Composable
@@ -26,20 +26,22 @@ fun DayPartMenuScreen(
 ) {
     val uiState by viewModel.uiState.collectAsState()
 
-    Column(
+    LazyColumn(
+        contentPadding = PaddingValues(all = 8.dp),
         horizontalAlignment = Alignment.CenterHorizontally,
         verticalArrangement = Arrangement.spacedBy(8.dp),
     ) {
-        Text(
-            text = "Placeholder DayPartMenu ${uiState.part.name}",
-            modifier = Modifier.padding(20.dp),
-            fontSize = 24.sp,
-            textAlign = TextAlign.Center,
-        )
-        IconTextTimeButton(
-            iconRes = Res.drawable.wake_up,
-            textRes = Res.string.day,
-            timeRes = Res.string.day,
-        ) {onNavigate?.invoke()}
+        items(1) { //TODO: Make this less hacky
+            Text(
+                text = "Placeholder DayPartMenu ${uiState.part.name}",
+                modifier = Modifier.padding(20.dp),
+                fontSize = 24.sp,
+                textAlign = TextAlign.Center,
+            )
+
+            for (button in MorningButtons.entries) {
+                IconTextTimeButton(button.toBundle())
+            }
+        }
     }
 }
