@@ -9,6 +9,7 @@ Did:
     - Add icons and other assets from Java Zealotry project
     - Change IconTextButton to IconTextTimeButton
     - Add strings for (main) morning button names
+    - Start populating the morning menu with IconTextTimeButtons
 
 21-10-2024
 Streak: 1
